--- a/src/app/disciplinas/list-disciplinas/list-disciplinas.component.html
+++ b/src/app/disciplinas/list-disciplinas/list-disciplinas.component.html
@@ -8,7 +8,7 @@
     </tr>
   </thead>
 
-  <tbody *ngFor="let disciplina of (disciplinas | async)">
+  <tbody *ngFor="let disciplina of (disciplinasObs | async)">
     <tr>
       <th scope="row">*</th>
       <td>{{ disciplina.codigo }}</td>
