--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,12 +1,13 @@
 <div class="container">
-  <div class="tituloProjeto">
-    <h1>{{ title }}</h1>
-    <div class="form-group">
-        <button routerLink="/editProfessores" class="btn btn-primary">Professores</button>
-    </div>
-    
-    <div class="form-group">
-        <button routerLink="/editDisciplinas" class="btn btn-primary">Disciplinas</button>
-    </div>
-    
+  <div class="form-group">
+    <button routerLink="/editProfessores" class="btn btn-primary">
+      Professores
+    </button>
   </div>
+
+  <div class="form-group">
+    <button routerLink="/editDisciplinas" class="btn btn-primary">
+      Disciplinas
+    </button>
+  </div>
+</div>
