--- a/src/app/disciplinas/edit-disciplinas/edit-disciplinas.component.html
+++ b/src/app/disciplinas/edit-disciplinas/edit-disciplinas.component.html
@@ -1,7 +1,7 @@
 <h2>Disciplinas Cadastro</h2>
 
 
-<form (ngSubmit)="onSubmit()">
+<form class="form" (ngSubmit)="onSubmit()">
 
   <div class="form-group">
     <label>Código</label>
