--- a/src/app/professores/edit-professores/edit-professores.component.html
+++ b/src/app/professores/edit-professores/edit-professores.component.html
@@ -1,6 +1,6 @@
 <h2>Professores Cadastro</h2>
 
-<form (ngSubmit)="onSubmit()">
+<form class="form" (ngSubmit)="onSubmit()">
   <div class="form-group">
     <label>Nome</label>
     <input
