--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -1,10 +1,17 @@
 .container {
   margin-top: 2%;
   text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
-.btn{
-    width: 30%;
-    font-size: 250%;
-    margin-top: 3%;
+.form-group {
+  width: 100%;
+  height: 100%;
+}
+
+.btn {
+  width: 100%;
+  font-size: 250%;
+  margin-top: 3%;
 }
