--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,18 @@
 <div class="header">
-    <img
-      src="assets\unicap-header.png"
-      alt="unicap-header"
-    />
-  </div>
-  
-  <div class="menu">
-    <div class="title">
-      <h1>{{ title }}</h1>
-      <div class="form-group">
-        <button routerLink="/admin" class="btn btn-primary">Admin</button>
-      </div>
-  
-      <div class="form-group">
-        <a routerLink="/convidado" class="btn btn-primary">
-          Consultar Professores / Disciplinas
-        </a>
-      </div>
+  <img src="assets\unicap-header.png" alt="unicap-header" />
+</div>
+
+<div class="menu">
+  <div class="title">
+    <h1>{{ title }}</h1>
+    <div class="form-group">
+      <button routerLink="/admin" class="btn btn-primary">Admin</button>
+    </div>
+
+    <div class="form-group">
+      <button routerLink="/convidado" class="btn btn-primary">
+        Consultar Professores / Disciplinas
+      </button>
     </div>
   </div>
-  
-  
+</div>
