--- a/src/app/professores/edit-professores/edit-professores.component.css
+++ b/src/app/professores/edit-professores/edit-professores.component.css
@@ -6,6 +6,15 @@
     display: block;
 }
 
+.form > form-group{
+    width: 100%;
+    margin-right: 3%;
+}
+
+h2{
+    width: 100%;
+}
+
 .btn{
     margin-left: 30%;
 }
