--- a/src/app/disciplinas/edit-disciplinas/edit-disciplinas.component.html
+++ b/src/app/disciplinas/edit-disciplinas/edit-disciplinas.component.html
@@ -1,8 +1,6 @@
 <h2>Disciplinas Cadastro</h2>
 
-
 <form class="form" (ngSubmit)="onSubmit()">
-
   <div class="form-group">
     <label>Código</label>
     <input
@@ -34,4 +32,5 @@
   </div>
 
   <button type="submit" class="btn btn-primary">Salvar</button>
+  <button routerLink="/admin" class="btn btn-light">Voltar</button>
 </form>
