--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -10,6 +10,7 @@
       Disciplinas
     </button>
   </div>
-
-  <button routerLink="/" class="btn btn-light">Voltar</button>
+  <div class="form-group">
+    <button routerLink="/" class="btn btn-light">Voltar</button>
+  </div>
 </div>
