--- a/src/app/disciplinas/list-disciplinas/list-disciplinas.component.css
+++ b/src/app/disciplinas/list-disciplinas/list-disciplinas.component.css
@@ -1,7 +1,8 @@
-.body {
-    width: 100%;
-  }
+.container{
+  width: 100%;
+}
 .btn {
     margin-left: 1%;
     margin-bottom: 2%;
+    width: 50%;
 }
