--- a/src/app/disciplinas/list-disciplinas/list-disciplinas.component.html
+++ b/src/app/disciplinas/list-disciplinas/list-disciplinas.component.html
@@ -1,19 +1,20 @@
-<table class="table">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">Código</th>
-      <th scope="col">Descrição</th>
-      <th scope="col">Créditos</th>
-    </tr>
-  </thead>
+<div class="container">
+  <table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">Código</th>
+        <th scope="col">Descrição</th>
+        <th scope="col">Créditos</th>
+      </tr>
+    </thead>
 
-  <tbody *ngFor="let disciplina of (disciplinasObs | async)">
-    <tr>
-      <td>{{ disciplina.codigo }}</td>
-      <td>{{ disciplina.descricao }}</td>
-      <td>{{ disciplina.qtdCreditos }}</td>
-    </tr>
-  </tbody>
-</table>
-
-<button routerLink="/convidado" class="btn btn-light">Voltar</button>
+    <tbody *ngFor="let disciplina of (disciplinasObs | async)">
+      <tr>
+        <td>{{ disciplina.codigo }}</td>
+        <td>{{ disciplina.descricao }}</td>
+        <td>{{ disciplina.qtdCreditos }}</td>
+      </tr>
+    </tbody>
+  </table>
+  <button routerLink="/convidado" class="btn btn-light">Voltar</button>
+</div>
