--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -6,12 +6,12 @@
 }
 
 .form-group {
-  width: 100%;
-  height: 100%;
+  margin-right: 25%;
+  margin-left: 25%;
 }
 
 .btn {
   width: 100%;
-  font-size: 250%;
+  font-size: 120%;
   margin-top: 3%;
 }
