--- a/src/app/convidado/convidado.component.css
+++ b/src/app/convidado/convidado.component.css
@@ -5,11 +5,13 @@
 }
 
 .form-group {
-  width: 100%;
+  margin-right: 25%;
+  margin-left: 25%;
+  width: 50%;
 }
 
 .btn {
   width: 100%;
-  font-size: 24px;
+  font-size: 120%;
   margin-top: 3%;
 }
