--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,10 @@
+.container{
+  width: 100%;
+}
+
 .title {
   text-align: center;
+  font-size: 120%;
 }
 
 .header {
@@ -9,29 +14,26 @@
 
 .header > img {
   width: 100%;
-  height: 100%;
 }
 
 .menu {
   margin-top: 3%;
   text-align: center;
   width: 100%;
-  height: 100%;
 }
 
 .btn-primary {
   margin-top: 3%;
-  font-size: 24px;
+  font-size: 120%;
   font-family: "Times New Roman", Times, serif;
+  width: 50%;
 }
 
 .form-group {
   text-align: center;
   width: 100%;
-  height: 100%;
 }
 
 h1 {
   width: 100%;
-  height: 100%;
 }
