--- a/src/app/professores/list-professores/list-professores.component.html
+++ b/src/app/professores/list-professores/list-professores.component.html
@@ -1,20 +1,27 @@
-<table class="table">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">Nome</th>
-      <th scope="col">Matrícula</th>
-      <th scope="col">E-mail</th>
-    </tr>
-  </thead>
+<div class="container">
+  <table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">Nome</th>
+        <th scope="col">Matrícula</th>
+        <th scope="col">E-mail</th>
+      </tr>
+    </thead>
 
-  <tbody>
-    <tr *ngFor="let professor of (professores | async)">
-      <td ><button [routerLink]="['/listProfessores', professor.matricula]"class="btn btn-secondary">{{ professor.nome }}</button></td>
-      <td>{{ professor.email }}</td>
-      <td>{{ professor.matricula }}</td>
-    </tr>
-  </tbody>
-  
-</table>
-
-<button routerLink="/convidado" class="btn btn-light">Voltar</button>
+    <tbody>
+      <tr *ngFor="let professor of (professores | async)">
+        <td>
+          <button
+            [routerLink]="['/listProfessores', professor.matricula]"
+            class="btn btn-secondary"
+          >
+            {{ professor.nome }}
+          </button>
+        </td>
+        <td>{{ professor.email }}</td>
+        <td>{{ professor.matricula }}</td>
+      </tr>
+    </tbody>
+  </table>
+  <button routerLink="/convidado" class="btn btn-light">Voltar</button>
+</div>
